force-app/main/default/objects/Region_based_Adjustment__c/Region_based_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Region based Adjustment</label>
    <nameField>
        <label>Region based Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Region based Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>