force-app/main/default/objects/Region_based_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>