force-app/main/default/objects/Region_based_Adjustment__c/fields/Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Value__c</fullName>
    <label>Adjustment Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>